# kunkun

./: .env.example  .gitignore  README.md  download_files.py  hello.py  md_analyzer_flash.py  md_analyzer_pro.py  pyproject.toml  run.txt
.kun/: dashboard-20260710-195335.html  dashboard.html  evaluations.jsonl
.kun/cron/: tasks.json
.kun/memory/: MEMORY.md  code-exploration-before-implementation.md  plan-before-implement.md  prefer-direct-implementation.md  python-code-style.md  python-style-preferences.md
document/: AgentTeam三方对比.md  Kunkun核心创新与Pi扩展可行性.md  Pi扩展移植计划.md  Workflow与Cron技术对比.md  v0.1-MVP-更新公告.md  v0.2-更新公告.md  v0.3-更新公告.md  v0.3.1-更新公告.md  v0.3.2-更新公告.md  v0.4.0-更新公告.md  v0.4.1-更新公告.md  v0.4.2-更新公告.md  v0.4.3-更新公告.md  v0.5.0-更新公告.md  v0.6.0-更新公告.md  v0.7.0-更新公告.md  v0.7.1-更新公告.md  v0.8.0-更新公告.md  v0.9-计划.md  v0.9.0-更新公告.md  五大Agent全面对比.md  架构全景图.md  计划书_DS-Harness.md  记忆系统对比报告.md  设计方案_DS-Harness.md  设计方案_Kunkun.md
kun/utils/: downloader.py
skills/: .usage.json
skills/code-review/: SKILL.md
skills/git-conventions/: SKILL.md
skills/python-project/: SKILL.md
src/kun/: main.py
src/kun/cli/: tui.py
src/kun/core/: agent_loop.py  background_review.py  context.py  execution_log.py  llm_client.py  permission.py  state.py
src/kun/memory/: __init__.py  manager.py
src/kun/routing/: __init__.py  cost_router.py
src/kun/skills/: __init__.py  curator.py  usage.py
src/kun/tools/: __init__.py  bash_tool.py  decorators.py  glob_tool.py  registry.py  (+3 more)
src/kunkun/: __init__.py  main.py
tests/: test_learning.py  test_v02.py  test_v03.py  test_v04.py
(+50 files in other folders)
