[project]
name = "kunkun"
version = "0.7.0"
description = "Kun (鲲) — DeepSeek 原生编码 Agent。小而能化大，终成鹏。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "aiofiles>=24.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
kunkun = "kunkun.main:_entry_main"
kunkun-interactive = "kunkun.main:_entry_interactive"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
